# wavelib

./: CMakeLists.txt  README.md
include/: wavelib.h
src/: wavefilt.c  wavelib.c  wtmath.c
